Tue Apr 29 13:14:10 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Test_Output.cpp:
          Check for ACE_VXWORKS

Tue Apr 29 13:12:10 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * MonitorControl/AutoUpdateStarter.cpp:
        * MonitorControl/Constraint_Interpreter.cpp:
        * MonitorControl/Constraint_Interpreter.h:
        * MonitorControl/Constraint_Visitor.cpp:
        * MonitorControl/Constraint_Visitor.h:
        * MonitorControl/CPULoadMonitor.cpp:
        * MonitorControl/LinuxNetworkInterfaceMonitor.cpp:
        * MonitorControl/NumThreadsMonitor.cpp:
        * MonitorControl/WindowsMonitor.cpp:
        * MonitorControl/WindowsMultiInstanceMonitor.cpp:
          Updated includes to fix errors and improve compile speed when
          this lib is disabled

Tue Apr 29 08:16:10 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/MakeProjectCreator/templates/vxtest.mpd:
          Zap empty line

        * bin/PerlACE/ProcessVX.pm:
        * bin/PerlACE/ProcessVX_Unix.pm:
        * bin/PerlACE/ProcessVX_Win32.pm:
          Improved handling of vxtest file

Tue Apr 29 07:23:10 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/MEM_Connector.cpp:
        * ace/Service_Manager.cpp:
        * ace/SOCK_Dgram_Mcast.cpp:
          Reverted accidental commits from Doug

Tue Apr 29 06:32:10 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/MakeProjectCreator/modules/VXTestProjectCreator.pm:
          Generate exename.vxtest instead of project name

        * bin/MakeProjectCreator/templates/vxtest.mpd:
          Don't generate ld <

Mon Apr 28 22:34:10 UTC 2008  Steve Huston  <shuston@riverace.com>

        * tests/Proactor_UDP_Test.cpp: Fix compile errors on non-Windows.

Mon Apr 28 21:53:23 UTC 2008  Steve Huston  <shuston@riverace.com>

        * docs/ACE-development-process.html: Fix a few remaining nits.
